fix load error on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,13 @@
 
 @font-face {
     font-family: "Montserrat Black";
-    src: url("../public/Montserrat-Black.ttf");
+    src: url("../public/font/Montserrat-Black.ttf");
     font-weight: 900;
 }
 
 @font-face {
     font-family: "Montserrat Regular";
-    src: url("../public/Montserrat-Regular.ttf");
+    src: url("../public/font/Montserrat-Regular.ttf");
     font-weight: 400;
 }
 
